# steer

./: .gitignore  CLAUDE.md  Cargo.toml  IDEA.md  README.md  rustfmt.toml
.claude/: settings.json
.claude/skills/steer/: SKILL.md
.claude/skills/steer-creator/: SKILL.md
.steer/templates/deep-research/: expand.j2.md  plan_queries.j2.md  process.j2.md  scope.j2.md  search.j2.md  synthesize.j2.md
.steer/templates/default/: ask.j2.md  collect.j2.md  command.j2.md  judge.j2.md  print.j2.md  task.j2.md
.steer/templates/openspec-generate-specs/: coverage_guard.j2.md  detect_env.j2.md  full_validate.j2.md  gather.j2.md  generate_all.j2.md  identify.j2.md  plan_scan.j2.md  refine.j2.md  review.j2.md  summary.j2.md
.steer/templates/openspec-superpowers/: archive.j2.md  design.j2.md  plan.j2.md  proposal.j2.md  tasks.j2.md
.steer/workflows/: deep-research.steer  openspec-apply.steer  openspec-archive.steer  openspec-generate-specs.steer  openspec-propose.steer  os-bugfix.steer  template-switch.steer
artifacts/: bugfix-collect-template-semantics-attempt-1.md
crates/steer-cli/: Cargo.toml
crates/steer-cli/src/: main.rs
crates/steer-cli/tests/: cli.rs
crates/steer-core/: Cargo.toml
crates/steer-syntax/: Cargo.toml
docs/: design.md  index.md
docs/references/: behavior-specs.md  index.md
docs/specs/: cli.md  control-flow.md  discovery.md  index.md  instance.md  ir-vm.md  lexing.md  parsing.md  runtime-check.md  simulation.md  templates.md  validation.md  workflow-listing.md
examples/: README.md
examples/workflows/: bugfix-loop.steer  openspec-apply.steer  openspec-change.steer  openspec-propose.steer
openspec/: index.md
openspec/changes/: index.md
openspec/specs/: index.md
(+96 files in other folders)
